--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sliver",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "128-bit, k-ordered, lexicographically sortable, base 62, coordination free id generation for Node",
   "main": "src/sliver.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
-  "license": "MIT License - http://opensource.org/licenses/MIT",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/LeanKit-Labs/sliver"
@@ -27,9 +27,9 @@
     "should": "^5.2.0"
   },
   "dependencies": {
-    "lodash": "~2.4.1",
+    "basejump": "~0.2.0",
+    "farmhash": "^1.1.0",
     "getmac": "~1.0.6",
-    "murmurhash3": "~0.2.3",
-    "basejump": "~0.1.1"
+    "lodash": "~2.4.1"
   }
 }
